[package]
name = "date_and_time"
version = "0.1.2"
edition = "2021"
author = "Markus Mueller <markus.mueller.73@hotmail.de>"


[target.'cfg(target_os = "linux")'.dependencies]
[dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_Foundation",
]
